[tool.poetry]
name = "knot-resolver"
version = "6.2.0"
description = "A modern, high-performance, modular DNS resolver with DNSSEC validation and advanced policy."
license = "GPL-3.0-or-later"
maintainers = [
    "Aleš Mrázek <ales.mrazek@nic.cz>"
]
authors = [
    "Václav Šraier <vaclav.sraier@nic.cz>"
]
readme = "README.md"
homepage = "https://www.knot-resolver.cz"
repository = "https://gitlab.nic.cz/knot/knot-resolver"
documentation = "https://www.knot-resolver.cz/documentation"

packages = [
    {include = "knot_resolver", from = "python"}
]
exclude = ["**/*.in", "**/meson.build"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "*"
jinja2 = "*"
pyyaml = "*"
supervisor = "*"
typing-extensions = "*"
prometheus-client = { version = "*", optional = true }
watchdog = { version = "*", optional = true }

[tool.poetry.extras]
prometheus = ["prometheus-client"]
watchdog = ["watchdog"]

[tool.poetry.group.build.dependencies]
poetry-core = ">=1.9.1"
setuptools = ">=75.3.2"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.5"
pyparsing = "^3.1.4"
poethepoet = "^0.24.4"
debugpy = "^1.8.18"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.8"
toml = "^0.10.2"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.9"
mypy = "^1.14.1"
types-pyyaml = "^6.0.12.20241230"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-rtd-theme = "^2.0.0"
breathe = "^4.35.0"

[tool.poetry.scripts]
knot-resolver = "knot_resolver.main:main"
kres-manager = "knot_resolver.manager.main:main"
kresctl = "knot_resolver.client.main:main"

[tool.poe.tasks]
# Tasks to configure, build and run
configure = { cmd = "scripts/poe-tasks/configure", help = "(Re)configure Meson build directory." }
run = { cmd = "scripts/poe-tasks/run", help = "Run Knot Resolver." }
run-debug = { cmd = "scripts/poe-tasks/run-debug", help = "Debug Knot Resolver with debugpy." }
kresctl = { cmd = "scripts/poe-tasks/kresctl", help="Run kresctl utility" }
docs = { cmd = "scripts/poe-tasks/docs", help = "Build Knot Resolver's HTML documentation." }
# Tasks to generate files
gen-constantspy = { cmd = "scripts/poe-tasks/gen-constantspy", help = "Generate 'constants.py' module using Meson configured options." }
gen-schema = { cmd = "scripts/poe-tasks/gen-schema", help = "Generate a JSON schema of Knot Resolver's declarative configuration."}
gen-setuppy = { cmd = "scripts/poe-tasks/gen-setuppy", help = "Generate 'setup.py' file for backwards compatibility." }
# Tasks to fix, check and test
fix-format = { cmd = "scripts/poe-tasks/fix-format", help = "Check and fix code formatting using Ruff." }
check-code = { cmd = "scripts/poe-tasks/check-code", help = "Check code format, run static code analysis (Ruff) and typing checker (Mypy)." }
check-files = { cmd = "scripts/poe-tasks/check-files", help = "Check that all dependencies are properly installed and generated files are not behind project." }
test-unit = { cmd = "scripts/poe-tasks/test-unit", help = "Run pytest unit tests." }
test-examples = { cmd = "scripts/poe-tasks/test-examples", help = "Validate all configuration examples using 'kresctl validate' utility." }
test-migrate = { cmd = "scripts/poe-tasks/test-migrate", help = "Migrate testing configuration using 'kresctl migrate' utility and validate it." }
# Other tasks
clean = { cmd = "scripts/poe-tasks/clean", help="Cleanup build directories and files." }

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = ["setup.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # * candidate for remove in the future

    # Annotations
    "ANN401",     # Dynamically typed expressions (typing.Any) are disallowed

    # Arguments
    "ARG001",     # Unused function argument
    "ARG002",     # Unused method argument
    "ARG004",     # Unused static method argument

    "B009",       # *Replace `getattr` with attribute access
    "BLE001",     # *Do not catch blind exception
    "C408",       # *Unnecessary `tuple` call (rewrite as a literal)
    "C417",       # *Unnecessary `map` usage (rewrite using a `list` comprehension)
    "COM812",     # Trailing comma missing

    # docstring
    "D100",       # Missing docstring in public module
    "D101",       # Missing docstring in public class
    "D102",       # Missing docstring in public method
    "D103",       # Missing docstring in public function
    "D104",       # Missing docstring in public package
    "D105",       # Missing docstring in magic method (__int__, __str__, ...)
    "D106",       # Missing docstring in public nested class
    "D107",       # Missing docstring in `__init__`
    # docstring: lines
    "D202",       # *No blank lines allowed after function docstring
    # docstring: incompatible
    "D203",       # No blank lines allowed before class docstring; incompatible with D211
    "D212",       # Multi-line docstring summary should start at the first line; incompatible with D213

    # exceptions
    "EM101",      # *Exception must not use a string literal, assign to variable first
    "EM102",      # *Exception must not use an f-string literal, assign to variable first
    "TRY003",     # Avoid specifying long messages outside the exception class
    "TRY004",     # *Prefer `TypeError` exception for invalid type
    "TRY301",     # *Abstract `raise` to an inner function
    "TRY400",     # *Use `logging.exception` instead of `logging.error`

    "ERA001",     # *Found commented-out code
    "FA100",      # (remove in py3.10) Add `from __future__ import annotations` to simplify typing

    # FIXME and TODO
    "FIX001",
    "FIX002",     # Missing issue link on the line following this TODO
    "TD001",
    "TD002",
    "TD004",

    # boolean
    "FBT001",     # Boolean-typed positional argument in function definition
    "FBT002",     # Boolean default positional argument in function definition
    "FBT003",     # Boolean positional value in function call

    # logging
    "G004",       # *Logging statement uses f-string
    "G201",       # *Logging `.exception(...)` should be used instead of `.error(..., exc_info=True)`

    "ISC001",     # *Single-line implicit string concatenation
    "PERF203",    # `try`-`except` within a loop incurs performance overhead
    "PLR2004",    # *Magic value used in comparison
    "PLW0603",    # Using the global statement to update `_value` is discouraged

    # path
    "PTH104",     # `os.rename()` should be replaced by `Path.rename()`
    "PTH108",     # `os.unlink()` should be replaced by `Path.unlink()`
    "PTH109",     # `os.getcwd()` should be replaced by `Path.cwd()`
    "PTH112",     # `os.path.isdir()` should be replaced by `Path.is_dir()`
    "PTH116",     # `os.stat()` should be replaced by `Path.stat()`, `Path.owner()`, or `Path.group()`
    "PTH118",     # `os.path.join()` should be replaced by `Path` with `/` operator
    "PTH120",     # `os.path.dirname()` should be replaced by `Path.parent`
    "PTH123",     # `open()` should be replaced by `Path.open()`
    "PTH201",     # *Do not pass the current directory explicitly to `Path`

    "RSE102",     # *Unnecessary parentheses on raised exception
    "RUF005",     # *Consider `[sys.executable, *sys.argv]` instead of concatenation
    "RUF010",     # *Use explicit conversion flag
    "RUF012",     # *Mutable class attributes should be annotated with `typing.ClassVar`
    "S101",       # Use of `assert` detected
    "S105",       # Possible hardcoded password assigned
    "S310",       # Audit URL open for permitted schemes. Allowing use of `file:` or custom schemes is often unexpected.
    "S606",       # Starting a process without a shell
    "S701",       # Using jinja2 templates with `autoescape=False` is dangerous and can lead to XSS.
                  # Ensure `autoescape=True` or use the `select_autoescape` function.
    "SIM105",     # Use `contextlib.suppress(FileNotFoundError)` instead of `try`-`except`-`pass`
    "SIM118",     # *Use `key in dict` instead of `key in dict.keys()
    "T201",       # `print` found
    "TD003",      # Missing issue link on the line following this TODO

    "UP012",      # Unnecessary call to `encode` as UTF-8
    "UP015",      # Unnecessary open mode parameters
    "UP036",      # *Version block is outdated for minimum Python version
    "UP037",      # *Remove quotes from type annotation

    # type-checking
    "TCH001",     # *Move application import into a type-checking block
    "TCH003",     # *Move standard library import into a type-checking block
]
exclude = [
    "tests/python/knot_resolver*"
]

[tool.ruff.lint.isort]
known-first-party=["knot_resolver"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_decorators = true
pretty = true
show_error_codes = true
allow_redefinition = true
disallow_untyped_defs = false
strict_equality = true
disallow_incomplete_defs = true
check_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true

[build-system]
requires = [
    "poetry-core",
    "setuptools"
]
build-backend = "poetry.core.masonry.api"
