[project]
name = "knot-resolver"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "jinja2",
    "pyyaml",
    "supervisor",
]

[project.optional-dependencies]
prometheus = ["prometheus-client"]
watchdog = ["watchdog"]
dev = [
    "pyparsing",
    "poethepoet",
    "debugpy",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
lint = [
    "ruff",
    "mypy",
    "types-pyyaml",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "breathe",
    # 'imghdr' was removed from a standard library in Python 3.13 (https://peps.python.org/pep-0594/).
    # 'standard-imghdr' is a replacement for missing 'imghdr' module for projects that depend on it.
    # https://pypi.org/project/standard-imghdr/
    "standard-imghdr",
]

[project.scripts]
knot-resolver = "knot_resolver.main:main"
kres-manager = "knot_resolver.manager.main:main"
kresctl = "knot_resolver.client.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# [tool.setuptools]
# package-dir = {"" = "python"}
# ext-modules = [
#     {name = "knot_resolver.controller.supervisord.plugin.notify", sources = ["python/knot_resolver/controller/supervisord/plugin/notifymodule.c"]}
# ]

# [tool.setuptools.package-data]
# knot_resolver = ["datamodel/templates/**/*.j2", "controller/supervisord/*.j2"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.poe.tasks]
# Tasks to configure, build and run
configure = { cmd = "scripts/poe-tasks/configure", help = "(Re)configure Meson build directory." }
run = { cmd = "scripts/poe-tasks/run", help = "Run Knot Resolver." }
run-debug = { cmd = "scripts/poe-tasks/run-debug", help = "Debug Knot Resolver with debugpy." }
kresctl = { cmd = "scripts/poe-tasks/kresctl", help="Run kresctl utility" }
docs = { cmd = "scripts/poe-tasks/docs", help = "Build Knot Resolver's HTML documentation." }
# Tasks to generate files
gen-constantspy = { cmd = "scripts/poe-tasks/gen-constantspy", help = "Generate 'constants.py' module using Meson configured options." }
gen-schema = { cmd = "scripts/poe-tasks/gen-schema", help = "Generate a JSON schema of Knot Resolver's declarative configuration."}
# Tasks to fix, check and test
fix-format = { cmd = "scripts/poe-tasks/fix-format", help = "Check and fix code formatting using Ruff." }
check-code = { cmd = "scripts/poe-tasks/check-code", help = "Check code format, run static code analysis (Ruff) and typing checker (Mypy)." }
check-files = { cmd = "scripts/poe-tasks/check-files", help = "Check that all dependencies are properly installed and generated files are not behind project." }
test-unit = { cmd = "scripts/poe-tasks/test-unit", help = "Run pytest unit tests." }
test-examples = { cmd = "scripts/poe-tasks/test-examples", help = "Validate all configuration examples using 'kresctl validate' utility." }
test-migrate = { cmd = "scripts/poe-tasks/test-migrate", help = "Migrate testing configuration using 'kresctl migrate' utility and validate it." }
# Other tasks
clean = { cmd = "scripts/poe-tasks/clean", help="Cleanup build directories and files." }

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["python"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "ISC",  # flake8-implicit-str-concat
    "RET",  # flake8-return
    "PERF", # Perflint
    "PTH",  # pathlib
    "RUF",  # Ruff-specific
]
exclude = ["tests/pytests/*"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
mypy_path = ["python"]
python_version = "3.11"
strict = true

# Output
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

# Extra diagnostics
warn_unused_configs = true
warn_unreachable = true

# Project layout
namespace_packages = true
explicit_package_bases = true

enable_error_code = ["ignore-without-code"]
